[package]
name = "lerror"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library for creating error types reporting file name, line and column instead of backtrace."
repository = "https://github.com/gfreezy/lerror"
homepage = "https://github.com/gfreezy/lerror"

[dependencies]

[dev-dependencies]
futures = { version = "0.3", default-features = false }
rustversion = "1.0.6"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0.45"
trybuild = { version = "1.0.66", features = ["diff"] }
